--- a/react-sanity/react/package.json
+++ b/react-sanity/react/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "react-sanity",
+  "name": "react",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.71.1",
-    "next": "15.1.6",
-    "next-sanity": "^9.8.40",
+    "@sanity/vision": "^3.75.1",
+    "next": "15.1.7",
+    "next-sanity": "^9.8.57",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sanity": "^3.71.1",
-    "styled-components": "^6.1.14"
+    "sanity": "^3.75.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
